# oss

./: .goreleaser.yml  LICENSE  NOTICE  README.md  default.nix  flake.nix
.github/workflows/: release.yml
agent/: go.mod  go.sum
agent/cmd/devboxes-agent/: main.go
agent/internal/api/: api.go  api_test.go
agent/internal/config/: config.go  config_test.go
agent/internal/identity/: identity.go  identity_test.go
agent/internal/sessions/: agentforward.go  agentforward_test.go  attach_race_test.go  fanout_test.go  reconcile.go  ring.go  ring_test.go  session.go  sessions.go  sessions_test.go
agent/internal/sshserver/: session_subsystem_test.go  sshserver.go  sshserver_test.go
agent/internal/supervisor/: supervisor.go  supervisor_test.go
agent/internal/wgnet/: wgnet.go  wgnet_test.go
cli/: BUILD  go.mod  go.sum
cli/clikit/deviceflow/: deviceflow.go  deviceflow_test.go
cli/clikit/httpx/: httpx.go  httpx_test.go
cli/clikit/kongx/: kongx.go
cli/clikit/login/: login.go  login_test.go
cli/clikit/table/: table.go  table_test.go
cli/clikit/xdgconfig/: xdgconfig.go  xdgconfig_test.go
cli/cmd/rift/: BUILD  audit.go  audit_test.go  commands.go  commands_test.go  connect.go  connect_test.go  genepoch.go  image.go  image_test.go  init.go  init_eval_test.go  init_test.go  login_interactive.go  login_interactive_test.go  main.go  pool.go  regions.go  (+14 more)
cli/cmd/rift/testdata/init-fixtures/python-syslib/: pyproject.toml
docs/: api-reference.md  getting-started.md  image-config.md  secrets.md
examples/: flake.nix  secrets.json
nix/devboxes-base/: module.nix
(+56 files in other folders)
